--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@ What are you doing here?! you sneaky developer...
   <!-- don't forget to remove this >>>>(google tag manager) script, if you are using this page/code -->
   <!-- don't forget to remove this >>>>(google tag manager) script, if you are using this page/code -->
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-YMWDE0VTD3"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() {
@@ -37,7 +36,6 @@ What are you doing here?! you sneaky developer...
   <!-- don't forget to remove this >>(google site verification meta tag) tag, if you are using this page/code -->
   <!-- don't forget to remove this >>(google site verification meta tag) tag, if you are using this page/code -->
   <!-- don't forget to remove this >>(google site verification meta tag) tag, if you are using this page/code -->
-  <meta name="google-site-verification" content="zMNl24ruDnyqiliYwKNU_r09OkPCDKz0kMBtF9nqiCc" />
   <!-- don't forget to remove this >>(google site verification meta tag) tag, if you are using this page/code -->
   <!-- don't forget to remove this >>(google site verification meta tag) tag, if you are using this page/code -->
   <!-- don't forget to remove this >>(google site verification meta tag) tag, if you are using this page/code -->
@@ -48,25 +46,20 @@ What are you doing here?! you sneaky developer...
   <meta name="robots" content="index, follow" />
   <meta name="theme-color" content="#000" />
   <meta name="description"
-    content="Vinod Jangid | Portfolio, Visit and know about me & my projects/designs. I value simple content structure, clean design patterns, and thoughtful interactions." />
+    content="Jana Gebrayel | Portfolio, Visit and know about me & my projects/designs. I value converting data into useful information that I can utilize to my make powerful business decisons in my marketing work." />
   <meta name="keywords"
-    content="vinod jangid,vinod jangid portfolio,Vinod Jangid Portfolio,vinodjangid,vinod jangid site,Vinod Jangid Site,vinod jangid me,vinod jangid web,vinod jangid github,vinodjangid site,vinodjangid uiverse,uiverse,vinod jangid uiverse,vinod jangid frontend developer,frontend developer,vinod jangid jaipur,vinod jaipur" />
-  <meta name="author" content="Vinod Jangid" />
+    content="jana gebrayel, jana gebrayel portfolio, marketing analyst" />
+  <meta name="author" content="Jana Gebrayel" />
   <meta property="og:image" content="https://www.vinodjangid.site/src/png/Preview-card-min.png" />
-  <meta property="og:title" content="Vinod Jangid | Portfolio" />
+  <meta property="og:title" content="Jana Gebrayel | Portfolio" />
   <meta property="og:description"
-    content="Hi! My name is Vinod. I'm a web developer and digital visual artist. Visit and know about me & my projects/designs. I value simple content structure, clean design patterns, and thoughtful interactions." />
+    content="Hi! My name is Jana. I'm a senior Marketing and Data Analytics student at LAU. Visit and know about me & my projects/designs. I value converting data into useful information that I can utilize to my make powerful business decisons in my marketing work." />
 
-  <meta property="og:url" content="https://vinodjangid.site" />
-  <meta property="og:site_name" content="Vinod Jangid Portfolio" />
+  <meta property="og:url" content="https://jana-gebrayel.site" />
+  <meta property="og:site_name" content="Jana Gebrayel Portfolio" />
 
-  <meta name="twitter:image:src" content="https://www.vinodjangid.site/src/png/Preview-card-min.png" />
-  <meta name="twitter:site" content="@Portfolio" />
-  <meta name="twitter:card" content="summary" />
-  <meta name="twitter:title" content="Vinod Jangid | Portfolio" />
-  <meta name="twitter:description"
-  content="Hi! My name is Vinod. I'm a web developer and digital visual artist. Visit and know about me & my projects/designs. I value simple content structure, clean design patterns, and thoughtful interactions." />
-  <title>Vinod Jangid | Portfolio</title>
+  content="Hi! My name is Jana. I'm a senior Marketing and Data Analytics student at LAU. Visit and know about me & my projects/designs. I value converting data into useful information that I can utilize to my make powerful business decisons in my marketing work." />
+  <title>Jana Gebrayel | Portfolio</title>
   <link rel="icon" type="image/x-icon" href="src/png/main-favicon.png" />
   <!-- aos cdn -->
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
