--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@ What are you doing here?! you sneaky developer...
   <meta name="keywords"
     content="jana gebrayel, jana gebrayel portfolio, marketing analyst" />
   <meta name="author" content="Jana Gebrayel" />
-  <meta property="og:image" content="https://www.janagebrayelportfolio.site/src/png/Preview-card-min.png" />
+  <meta property="og:image" content="https://www.vinodjangid.site/src/png/Preview-card-min.png" />
   <meta property="og:title" content="Jana Gebrayel | Portfolio" />
   <meta property="og:description"
     content="Hi! My name is Jana. I'm a senior Marketing and Data Analytics student at LAU. Visit and know about me & my projects/designs. I value converting data into useful information that I can utilize to my make powerful business decisons in my marketing work." />
 
-  <meta property="og:url" content="http://www.janagebrayelportfolio.site/" />
+  <meta property="og:url" content="http://www.vinodjangid.site/" />
   <meta property="og:site_name" content="Jana Gebrayel Portfolio" />
 
   content="Hi! My name is Jana. I'm a senior Marketing and Data Analytics student at LAU. Visit and know about me & my projects/designs. I value converting data into useful information that I can utilize to my make powerful business decisons in my marketing work." />
