--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 ░╚════╝░╚═╝░░╚═╝╚═╝░░╚══╝░╚═════╝░╚═╝╚═════╝░
 What are you doing here?! you sneaky developer...
 -->
-
+git add --all
+git commit -m "Initial commit"
+git push -u origin main
+  
 <head>
   <!-- don't forget to remove this >>>>(google tag manager) script, if you are using this page/code -->
   <!-- don't forget to remove this >>>>(google tag manager) script, if you are using this page/code -->
